Made footer a solid color instead of opaque to prevent background from bleeding through. Changed in site.css.

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -408,7 +408,7 @@ ul {
     line-height: 60px; /* Vertically center the text there */
     font-family: 'Nunito', sans-serif;
     background: #6495ED;
-    opacity: 0.8;
+    opacity: 1;
 }
 /*Backgrounds*/
 .bg-navbar {
